--- a/src/sass/blocks/_count-bubble.scss
+++ b/src/sass/blocks/_count-bubble.scss
@@ -1,5 +1,5 @@
 .count-bubble {
-    background: $count-bubble-background-color;
+    background: $count-bubble-color;
     position: absolute;
     top: -.5rem; right: -.25rem;
     padding: .25rem .5rem;
@@ -11,7 +11,7 @@
     position: absolute;
     width: 0; height: 0;
     top: 100%; left: .25rem;
-    border: .25rem solid $count-bubble-background-color;
+    border: .25rem solid $count-bubble-color;
     border-right-color: transparent;
     border-bottom-color: transparent;
 }
