--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -18,18 +18,54 @@ html(lang="en")
 
             .layout__body
                 .layout__content
+                    
                     +section("Action card")
                         include blocks/_actions-card
+                    
                     +section("Form actions")
                         include blocks/_actions
+                    
                     +section("Buttons")
                         include blocks/_buttons
+                    
                     //- +section("Comments")
                     //-     include blocks/_comment
+                    
                     //- +section("Count bubbles")
                     //-     include blocks/_count-bubble
+                    
                     +section("Flashes")
                         include blocks/_flash
+
+                    +section("Pagination")
+                        include blocks/_pagination
+
+
+
+
+
+
+                        //- _footer.scss
+                        //- _form.scss
+                        //- _grid.scss
+                        //- _image-card.scss
+                        //- _images-grid.scss
+                        //- _layout.scss
+                        //- _lightbox.scss
+                        //- _mosaic.scss
+                        //- _nav.scss
+                        //- _navbar.scss
+                        //- _overlay-dialog.scss
+                        //- _progress-bar.scss
+                        //- _table.scss
+                        //- _tagger.scss
+
+
+
+
+
+
+
                     
                 .layout__post-content
                     section.post-content post-content
