--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,10 @@ doctype html
 html(lang="en")
     head
         meta(charset="utf-8")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
+            
         title vz.lab | style
+
         link(rel="stylesheet" href="css/main.css")
         link(rel="stylesheet" href="css/kitchen-sink.css")
     body
