fix inheritance on actions-card

--- a/src/pug/blocks/_actions-card.pug
+++ b/src/pug/blocks/_actions-card.pug
@@ -1,9 +1,12 @@
 .actions-card
     .actions-card__header
         h1 Action title
-        .actions-card__content
-            p.message Are you sure you want to delete this thing?
-            button.button.button--danger.button--block
-                | I'm sure! Go ahead and delete this thing.
-            button.button.button--secondary.button--block
-                | Not realy… Please take me back.
+    
+    .actions-card__content
+        p.message Are you sure you want to delete this thing?
+    
+    .actions-card__actions
+        button.button.button--danger.button--block
+            | I'm sure! Go ahead and delete me!
+        button.button.button--secondary.button--block
+            | Not realy… Please take me back.
