--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -107,6 +107,15 @@ error: rgba(crimson, .33) crimson $white,
 
 
 // =============================================================================
+// Action card
+// -----------------------------------------------------------------------------
+
+$action-card-max-width: 40rem;
+$action-card-background: $black;
+$action-card-text: $white;
+
+
+// =============================================================================
 // Forms
 // -----------------------------------------------------------------------------
 
