--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,8 +4,10 @@
 :root {
     font: 16px/1.414 $sans-serif;
     font-weight: 400;
-    background: $background;
-    color: $text;
+    // background: $background;
+    // color: $text;
+    background: white;
+    color: #444;
     box-sizing: border-box;
     outline-color: $selection-color;
 }
