--- a/src/sass/blocks/_actions.scss
+++ b/src/sass/blocks/_actions.scss
@@ -1,5 +1,5 @@
 .actions {
-    border-top: .125rem solid rgba($white, .1);
+    border-top: medium solid $action-border-color;
     margin: 1rem 0 2rem;
     padding-top: 1rem;
     text-align: end;
