--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -22,9 +22,11 @@ $gray-darkest: $gray-1;
 $green: #cf0;
 $pink: #ec0d8b;
 $yellow: gold;
+$blue: dodgerblue;
 
 // sizes
 $short: 15rem;
+$thin: 2px;
 
 // times
 $fast: 250ms;
@@ -47,7 +49,9 @@ $color-error: $pink;
 // General site styles
 // -----------------------------------------------------------------------------
 
-$selection-color: $green;
+$accent: $green;
+$selection-background: $accent;
+$selection-color: $black;
 $background: $gray-darker;
 $text: $white;
 
@@ -67,6 +71,21 @@ $grid-gutter: 1rem;
 $grid-columns: 12;
 
 
+
+// =============================================================================
+// ==                                                                         ==
+// ==                                 Blocks                                  ==
+// ==                                                                         ==
+// =============================================================================
+
+
+// =============================================================================
+// Action
+// -----------------------------------------------------------------------------
+
+$action-border-color: $gray-dark;
+
+
 // =============================================================================
 // Navbar
 // -----------------------------------------------------------------------------
@@ -82,13 +101,13 @@ $navbar-link-hover-background: $gray-dark;
 // -----------------------------------------------------------------------------
 
 $buttons: (
-// type: background color hover:background
-default: lightgray black lighten(lightgray, 20%),
-primary: dodgerblue white lighten(dodgerblue, 20%),
-secondary: mix(lightgray, dodgerblue) white lighten(mix(lightgray, dodgerblue), 20%),
-yes: yellowgreen white lighten(yellowgreen, 20%),
-no: salmon white lighten(salmon, 20%),
-danger: crimson white lighten(crimson, 20%),
+    // type: background color hover:background
+    default: lightgray black lighten(lightgray, 20%),
+    primary: $blue white lighten($blue, 20%),
+    secondary: mix(lightgray, $blue) white lighten(mix(lightgray, $blue), 20%),
+    yes: yellowgreen white lighten(yellowgreen, 20%),
+    no: salmon white lighten(salmon, 20%),
+    danger: crimson white lighten(crimson, 20%),
 );
 
 
@@ -97,12 +116,12 @@ danger: crimson white lighten(crimson, 20%),
 // -----------------------------------------------------------------------------
 
 $flashes: (
-// type: background border-color color
-default: rgba(dimgray, .33) dimgray $white,
-info: rgba(teal, .33) teal $white,
-success: rgba(yellowgreen, .33) yellowgreen $white,
-warning: rgba($yellow, .33) $yellow $white,
-error: rgba(crimson, .33) crimson $white,
+    // type: background border-color color
+    default: rgba(dimgray, .33) dimgray $white,
+    info: rgba(teal, .33) teal $white,
+    success: rgba(yellowgreen, .33) yellowgreen $white,
+    warning: rgba($yellow, .33) $yellow $white,
+    error: rgba(crimson, .33) crimson $white,
 );
 
 
@@ -129,11 +148,14 @@ $form-field-padding: 0.5rem 1rem;
 // Pagination
 // -----------------------------------------------------------------------------
 
-$pagination: (
-active-color: tomato,
-disabled-background: $yellow,
-);
-$pagination-active-color: $selection-color;
+$pagination-color: $text;
+$pagination-background: $gray;
+$pagination-background-hover: $gray-light;
+$pagination-active-color: $black;
+$pagination-active-background: $accent;
+$pagination-active-background-hover: $accent;
+$pagination-disabled-color: $gray;
+$pagination-disabled-background: $gray-dark;
 
 
 // =============================================================================
