--- a/src/sass/blocks/_pagination.scss
+++ b/src/sass/blocks/_pagination.scss
@@ -1,11 +1,3 @@
-$defaults: (
-    active-color: $white,
-    active-background: $pink,
-    disabled-color: dimgray,
-    disabled-background: gray,
-);
-$pagination: map-merge($pagination, $defaults);
-
 .pagination {
     margin: 2rem 0;
 }
@@ -16,14 +8,21 @@ $pagination: map-merge($pagination, $defaults);
 .pagination__button {
     @extend .button;
     @extend .button--small;
+    color: $pagination-color;
+    background: $pagination-background;
     margin: 0 .25rem;
-
+    &:hover, &:focus {
+        background: $pagination-background-hover;
+    }
     &--active {
-        color: map-get($pagination, 'active-color');
-        background: map-get($pagination, 'active-background');
+        color: $pagination-active-color;
+        background: $pagination-active-background;
+        &:hover, &:focus {
+            background: $pagination-active-background-hover;
+        }
     }
     &[disabled] {
-        color: map-get($pagination, 'disabled-color');
-        background: map-get($pagination, 'disabled-background');
+        color: $pagination-disabled-color;
+        background: $pagination-disabled-background;
     }
 }
