bring forms and add a11y

--- a/src/docs/pug/index.pug
+++ b/src/docs/pug/index.pug
@@ -28,6 +28,9 @@ html(lang="en")
                     +section("Action card")
                         include blocks/_actions-card
                     
+                    +section("Form")
+                        include blocks/_form
+                    
                     +section("Form actions")
                         include blocks/_actions
                     
@@ -52,7 +55,6 @@ html(lang="en")
 
 
                         //- _footer.scss
-                        //- _form.scss
                         //- _image-card.scss
                         //- _images-grid.scss
                         //- _layout.scss
