--- a/src/sass/vzlab-style/_variables.scss
+++ b/src/sass/vzlab-style/_variables.scss
@@ -139,7 +139,7 @@ $action-card-text: $white !default;
 // -----------------------------------------------------------------------------
 
 $form-color: $white !default;
-$form-active-color: $selection-color !default;
+$form-active-color: $accent !default;
 $form-error-color: $color-warning !default;
 $form-field-padding: 0.5rem 1rem !default;
 
