--- a/src/docs/pug/index.pug
+++ b/src/docs/pug/index.pug
@@ -37,8 +37,8 @@ html(lang="en")
                     +section("Buttons")
                         include blocks/_buttons
                     
-                    //- +section("Comments")
-                    //-     include blocks/_comment
+                    +section("Comments")
+                        include blocks/_comment
                     
                     //- +section("Count bubbles")
                     //-     include blocks/_count-bubble
