add count bubbles

--- a/src/docs/pug/index.pug
+++ b/src/docs/pug/index.pug
@@ -40,8 +40,8 @@ html(lang="en")
                     +section("Comments")
                         include blocks/_comment
                     
-                    //- +section("Count bubbles")
-                    //-     include blocks/_count-bubble
+                    +section("Count bubbles")
+                        include blocks/_count-bubble
                     
                     +section("Flashes")
                         include blocks/_flash
