--- a/src/sass/vzlab-style/_variables.scss
+++ b/src/sass/vzlab-style/_variables.scss
@@ -193,6 +193,9 @@ $comment-background-active: $pink !default;
 
 $count-bubble-color: $pink !default;
 $count-bubble-text: $white !default;
+$count-bubble-faded-color: $gray-lighter !default;
+$count-bubble-faded-text: $white !default;
+$count-bubble-tail-size: .5rem;
 
 
 // =============================================================================
