--- a/src/sass/vzlab-style/main.scss
+++ b/src/sass/vzlab-style/main.scss
@@ -25,6 +25,9 @@ a {
 label {
     cursor: pointer;
 }
+picture {
+    position: relative;
+}
 [tabindex]:not([readonly]):not([disabled]) {
     cursor: pointer;
 }
