add logo to header

--- a/src/docs/pug/_header.pug
+++ b/src/docs/pug/_header.pug
@@ -5,7 +5,7 @@ header#header.navbar
                 .navbar__content
                     .navbar__brand
                         a(href='#')
-                            img(src='/clients/vetorzero/moodboard/web/_static/images/logo.svg', alt='VZ.Lab - Moodboard', height='30px')
+                            img(src='images/logo.svg', alt='vz.lab', height='30px')
 
             .grid__flex.grid__flex--1
                 nav.navbar__content
