--- a/src/docs/pug/index.pug
+++ b/src/docs/pug/index.pug
@@ -17,7 +17,7 @@ html(lang="en")
     body
         .layout
             .layout__header
-                include blocks/_header
+                include _header
 
             .layout__body
                 .layout__content
