--- a/src/sass/vzlab-style/kitchen-sink.scss
+++ b/src/sass/vzlab-style/kitchen-sink.scss
@@ -15,5 +15,9 @@
     color: $white;
     text-align: center;
     border-radius: .25rem;
-    margin-bottom: 1rem;
+
+    &--flat {
+        border-radius: 0;
+        border: thin solid $gray-dark;
+    }
 }
