grid is fully functional again

--- a/src/docs/pug/blocks/_form.pug
+++ b/src/docs/pug/blocks/_form.pug
@@ -91,17 +91,17 @@ h3 Regular
 
 h3 Linear
 .form
-    .grid__row
-        .grid__flex.grid__flex--1.grid__col--bottom
+    .g__r.g__r--column.g__r--sm-row
+        .g__c.g__c--expand.f.f--column.f--bottom
             .form__group
                 .form__label Label
                 .form__control
                     input(type='text', name='', value='')
-        .grid__flex.grid__flex--1.grid__col--bottom
+        .g__c.g__c--expand.f.f--column.f--bottom
             .form__group
                 .form__label Label
                 .form__control
                     input(type='text', name='', value='')
-        .grid__flex.grid__flex--0.grid__col--bottom
+        .g__c.g__c--shrink.f.f--column.f--bottom
             .form__group
                 button.button.button--primary.button--small.button--block.button--no-margin Submit
