--- a/src/docs/pug/blocks/_grid.pug
+++ b/src/docs/pug/blocks/_grid.pug
@@ -68,6 +68,21 @@ p You can also mix grid containers for great win
     .gutterless-grid__c.gutterless-grid__c--4: .ks__pill.ks__pill--flat 3/12
 
 
+h3 Flex
+p This grid uses flex units to build proportional columns
+.g__r
+    .g__c.g__c--shrink: .ks__pill Shrink
+    .g__c.g__c--expand: .ks__pill Expand
+    .g__c.g__c--shrink: .ks__pill Shrink
+
+p Starts as column; turns to row from medium displays and up
+.g__r.g__r--column.g__r--md-row
+    .g__c.g__c--shrink: .ks__pill Shrink
+    .g__c.g__c--shrink: .ks__pill Shrink
+    .g__c.g__c--expand: .ks__pill Expand
+
+
+
 //- h3 Proportional
 //- .g__r
 //-     .grid__flex.grid__flex--1
