fix navbar grid

--- a/src/docs/pug/_header.pug
+++ b/src/docs/pug/_header.pug
@@ -1,19 +1,19 @@
 header#header.navbar
-    .grid
-        .grid__row
-            .grid__flex.grid__flex--0
+    .g
+        .g__r
+            .g__c.g__c--shrink
                 .navbar__content
                     .navbar__brand
                         a(href='#')
                             img(src='images/logo.svg', alt='vz.lab', height='30px')
 
-            .grid__flex.grid__flex--1
+            .g__c.g__c--expand
                 nav.navbar__content
                     a.navbar__link.navbar__link--active(href='#') An action
                     |
                     a.navbar__link(href='#') Another action
 
-            .grid__flex.grid__flex--0
+            .g__c.g__c--shrink
                 .navbar__content
                     p
                         | Logged in as &nbsp;
