--- a/src/sass/vzlab-style/mixins/_grid.scss
+++ b/src/sass/vzlab-style/mixins/_grid.scss
@@ -58,8 +58,6 @@
     // columns
 
     #{$col-selector} {
-        width: 100%;
-
         @each $breakpoint in map-keys($breakpoints) {
             @include media-breakpoint-up($breakpoint) {
                 margin-left: (map-get($gutters, $breakpoint) / 2);
@@ -87,10 +85,10 @@
 
         // flex
         &--expand {
-            flex: 1 1 0;
+            flex: 1 0 auto;
         }
         &--shrink {
-            flex: 0 1 0;
+            flex: 0 0 auto;
         }
     }
 }
