--- a/src/docs/pug/index.pug
+++ b/src/docs/pug/index.pug
@@ -39,7 +39,8 @@ html(lang="en")
                         include blocks/_flash
                     +section("Pagination")
                         include blocks/_pagination
-
+                    +section("User profile card")
+                        include blocks/_profile
 
 
 
