--- a/src/sass/vzlab-style/mixins/_deco.scss
+++ b/src/sass/vzlab-style/mixins/_deco.scss
@@ -13,6 +13,7 @@
         content: "";
         position: absolute;
         bottom: 100%;
+        left: 0;
         background: transparent;
         width: 100%;
         height: $size;
